--- a/src/Input/InputMixins.scss
+++ b/src/Input/InputMixins.scss
@@ -13,6 +13,7 @@
   font-size: $fontSize;
   .input {
     display: block;
+    line-height: $height - 2px;
     font-size: $fontSize;
     &:-webkit-autofill {
       -webkit-box-shadow: 0 0 0 $height white inset;
